# basic-swerve-sim

./: .gitignore  .pdm-python  README.md  motion.template.yaml  package.xml  pyproject.toml  read_ros_bag_file.py  renovate.json  run_motion_profiles.py  run_path_following_simulation.py  run_simulator.py  run_trajectory_simulation.py  run_validation.py  run_verification.py  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
config/: sample.yaml
doc/: kinematics.drawio  ros-humble.yml
motions/: 0_deg_bwd_from_stop.yaml  0_deg_fwd_constant.yaml  0_deg_fwd_from_stop.yaml  0_deg_fwd_from_stop_slow.yaml  0_deg_fwd_to_90_deg.yaml  45_deg_fwd_from_stop.yaml  90_deg_fwd_from_stop.yaml  90_deg_rotation_-_fwd_from_stop.yaml  README.md  circle_no_orientation_change.yaml  inplace_rotation.yaml  inplace_rotation_and_translation_from_45.yaml  inplace_rotation_from_0_fwd.yaml  inplace_rotation_from_45_fwd.yaml
ros-multi-wheel-steering-controller-py/: control_model.py  drive_module.py  multi_wheel_steering_controller.py  odometry.py  trajectory.py
ros_multi_wheel_steering_controller_py/: control_model.py  drive_module.py  errors.py  geometry.py  multi_wheel_steering_controller.py  multi_wheel_steering_controller_ros.py  profile.py  sim_utils.py  states.py  test_control_model.py  test_multi_wheel_steering_controller.py  test_profile.py  test_trajectory.py  trajectory.py
sim_output/: animate.py  animate_motion_profile.py  animate_robot.py  plots.py
swerve_controller/: control.py  control_model.py  control_profile.py  drive_module.py  geometry.py  inputs.py  multi_wheel_steering_controller.py  profile.py  sim_utils.py  states.py  trajectory.py
test/: test_copyright.py  test_flake8.py  test_pep257.py
tests/: test_control_model.py  test_control_profile.py  test_geometry.py  test_multi_wheel_steering_controller.py  (+2 more)
(+95 files in other folders)
